Bug 1244870 - initialization of err variable r=jya

MozReview-Commit-ID: 6Zh7tqNdHeu